--- a/style.css
+++ b/style.css
@@ -14,6 +14,21 @@ body{
     margin: 0;
     padding: 0;
 }
+#lives{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    z-index: 1;
+    top: 30px;
+    left: 30px;
+    font-family: code;
+    color: red;
+}
+#lives img{
+    width: 50px;
+}
 #bg_vid{
     position: fixed;
     width: 100%;
@@ -39,7 +54,7 @@ body{
     justify-content: center;
     align-items: center;
     color: white;
-    
+    position: relative;
 }
 #danger{
     font-family: danger;
@@ -60,5 +75,100 @@ body{
     font-family: code;
     font-size: 15px;
     color: rgb(5, 151, 5);
+    margin-top: 20px;
+}
 
+.input_div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
+#guess_input{
+    background-color: transparent;
+    outline: none;
+    border-color: rgb(5, 151, 5);
+    border-width: 3px;
+    border-style: solid;
+    width: 300px;
+    height: 30px;
+    font-size: 25px;
+    font-family: code;
+    color: rgb(5, 151, 5);
+    text-align: center;
+}
+#guess_btn{
+    font-family: code;
+    font-weight: bold;
+    font-size: 20px;
+    color: rgb(10, 42, 10);
+    background-color: rgb(5, 151, 5);
+    border-style: none;
+    height: 38px;
+    border-color: rgb(5, 151, 5);
+    border-width: 3px;
+    border-style: solid;
+    padding: 0 10px;
+    margin-left: 10px;
+}
+.output_div{
+    margin-top: 50px;
+    width: 30%;
+    height: 100px;
+}
+.output_div p{
+    margin: 0;
+    font-family: code;
+    text-align: center;
+    display: none;
+}
+#error_par{
+    color: rgb(170, 9, 9);
+}
+#success_par{
+    color: rgb(5, 151, 5);
+}
+#lose{
+    position: absolute;
+    z-index: -2;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+#access_denied{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 60px;
+    background-color: black;
+    border-style: solid;
+    border-color: rgb(170, 9, 9);
+    color: rgb(170, 9, 9);
+    font-family: danger;
+    font-size: 70px;
+    animation: fading 1s cubic-bezier(0.06, 1.53, 1, 1) infinite;
+}
+@keyframes fading{
+    0%{
+        opacity: 100%;
+    }
+    50%{
+        opacity: 0%;
+    }
+    100%{
+        opacity: 100%;
+    }
+}
+#try_again{
+    border: solid rgb(170, 9, 9);
+    background-color: black;
+    color: rgb(170, 9, 9);
+    font-family: code;
+    font-weight: bold;
+    font-size: 30px;
+    padding: 20px 40px;
+    margin-top: 50px;
 }
